# marketo-rest-api-wrapper

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: CHANGELOG.md  index.md
docs/api/: activities.md  bulk-extract.md  bulk-import.md  campaigns.md  client.md  custom-objects.md  folders.md  leads.md  lists.md  programs.md  tokens.md
docs/guides/: authentication.md  bulk-operations.md  configuration.md  error-handling.md  installation.md  migration.md  pagination.md  quickstart.md  rate-limiting.md  recipes.md  retry-logic.md  salesforce-sync.md
examples/: basic_usage.py  bulk_operations.py
marketo_api/: __init__.py  auth.py  client.py  config.py  exceptions.py  transport.py
marketo_api/resources/: __init__.py  activities.py  base.py  bulk_extract.py  bulk_import.py  campaigns.py  custom_objects.py  folders.py  leads.py  lists.py  programs.py  tokens.py
marketo_api/utils/: __init__.py  pagination.py  rate_limiter.py  retry.py
tests/: test_config.py  test_exceptions.py  test_rate_limiter.py
